# Chzzk_NBD_Roulette

./: .gitignore  README.md  STREAMER_GUIDE.md  THIRD_PARTY_NOTICES.md  app.js  index.html  live-app.js  live.html  overlay-app.js  overlay.html  package-lock.json  package.json  server.mjs  streamer-app.js  streamer.html  styles.css  vite.config.js
lib/: chzzk-live-donation-client.mjs
scripts/: dev-launch.bat  dev-launch.ps1  dev-setup.bat  dev-setup.ps1  test-live-donations.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: app_state.rs  mod.rs  unofficial_live.rs
src-tauri/src/storage/: app_state_store.rs  mod.rs
src/pages/: overlay.html  streamer.html
src/scripts/: overlay-app.js  streamer-app.js
